# ComfyUI-VIBE

./: .gitignore  LICENSE  README.md  __init__.py  nodes.py  pyproject.toml  requirements.txt
.github/workflows/: publish.yml
examples/: vibe-workflow.json  workflow.json
js/: vibe_gui.js
vibe/: editor.py
