[project]
name = "vibe"
description = "Implementation of VIBE (Visual Instruction Based Editor) as a custom node for ComfyUI that enables image editing using natural language instructions leveraging Sana1.5 and Qwen3-VL models."
version = "1.0.0"
license = {file = "LICENSE"} 
# classifiers = [
#     # For OS-independent nodes (works on all operating systems)
#     "Operating System :: OS Independent",
#
#     # OR for OS-specific nodes, specify the supported systems:
#     "Operating System :: Microsoft :: Windows",  # Windows specific
#     "Operating System :: POSIX :: Linux",  # Linux specific
#     "Operating System :: MacOS",  # macOS specific
#
#     # GPU Accelerator support. Pick the ones that are supported by your extension.
#     "Environment :: GPU :: NVIDIA CUDA",    # NVIDIA CUDA support
#     "Environment :: GPU :: AMD ROCm",       # AMD ROCm support
#     "Environment :: GPU :: Intel Arc",      # Intel Arc support
#     "Environment :: NPU :: Huawei Ascend",  # Huawei Ascend support
#     "Environment :: GPU :: Apple Metal",    # Apple Metal support
# ]

dependencies = ["diffusers>=0.33.1", "transformers", "accelerate", "loguru", "pydantic>=2.0.0", "pydantic-settings", "python-dotenv", "sentencepiece"]

[project.urls]
Repository = "https://github.com/ato-zen/ComfyUI-VIBE"
#  Used by Comfy Registry https://registry.comfy.org
Documentation = "https://github.com/ato-zen/ComfyUI-VIBE/wiki"
"Bug Tracker" = "https://github.com/ato-zen/ComfyUI-VIBE/issues"

[tool.comfy]
PublisherId = ""
DisplayName = "ComfyUI-VIBE"
Icon = ""
includes = [] 
# "requires-comfyui" = ">=1.0.0"  # ComfyUI version compatibility

